Fixes a CSS glitch on Firefox

--- a/symphony/assets/basic.css
+++ b/symphony/assets/basic.css
@@ -168,16 +168,18 @@ button {
 }
 .invalid > .group > label {
 	float: right;
-	margin-left: 0;
-	padding: 0.75em 1em 0.75em 0.75em;
+	margin-left: -0.1em;
+	padding: 0.75em 1.1em 0.75em 0.75em;
 	border-left-width: 0;
 }
 .invalid > .group > label:first-child {
 	float: left;
-	margin-left: -2.95em;
-	padding: 0.75em 0 0.75em 1.1em;
+	margin-left: -2.94em;
+	margin-right: 0;
+	padding: 0.75em 0 0.75em 1em;
+	border-left-width: 1px;
+	border-right-width: 0;
 	border-left-color: #c31;
-	border-right-color: #d42;
 }
 .invalid > label {
 	padding: 0.75em 1em 0.75em;
